--- a/TestApplication/src/TestApplication.App.Core/TestApplication.DesktopApp.Core.csproj
+++ b/TestApplication/src/TestApplication.App.Core/TestApplication.DesktopApp.Core.csproj
@@ -8,6 +8,11 @@
 
   <ItemGroup>
     <PackageReference Include="MvvmCross" Version="7.1.2" />
+    <PackageReference Include="System.Configuration.ConfigurationManager" Version="7.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\TestApplication.BL\TestApplication.BL.csproj" />
   </ItemGroup>
 
 </Project>
