--- a/TestApplication/src/TestApplication.BL/TestApplication.BL.csproj
+++ b/TestApplication/src/TestApplication.BL/TestApplication.BL.csproj
@@ -7,7 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Services\" />
+    <PackageReference Include="AutoMapper" Version="12.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\TestApplication.DAL\TestApplication.DAL.csproj" />
   </ItemGroup>
 
 </Project>
