--- a/TestApplication/src/TestApplication.App.Core/TestApplication.DesktopApp.Core.csproj
+++ b/TestApplication/src/TestApplication.App.Core/TestApplication.DesktopApp.Core.csproj
@@ -7,12 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="12.0.0" />
     <PackageReference Include="MvvmCross" Version="7.1.2" />
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="7.0.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\TestApplication.BL\TestApplication.BL.csproj" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
   </ItemGroup>
 
 </Project>
